trunk/Archive2/ff/52f598217b1b97/output
main.cpp:19:8: error: 'int A::a' is not a static member of 'struct A'
 int A::a = 4;
        ^
